Complete remaining feature contracts